Fixed padding and spacing for website

--- a/src/scss/_containers.scss
+++ b/src/scss/_containers.scss
@@ -1,8 +1,9 @@
 .ant-layout {
 	min-height: 100vh;
 
-	.ant-layout-content {
-		margin-top: 4rem;
+	.main-container {
+		margin-top: 4rem + 4rem;
+		padding-bottom: 4rem;
 	}
 }
 
@@ -44,7 +45,6 @@
 
 	&.new-products-container {
 		padding-top: 4rem;
-		padding-bottom: 4rem;
 
 		.heading,
 		.description {
@@ -67,7 +67,6 @@
 		align-items: flex-start;
 		justify-content: center;
 		gap: 1rem;
-		padding: 2rem 0;
 
 		.ant-table-wrapper {
 			flex: 1;
