--- a/src/scss/components/_product.scss
+++ b/src/scss/components/_product.scss
@@ -2,7 +2,6 @@
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	gap: 2rem;
-	padding: 2rem 0;
 
 	.product-detail-gallery-wrapper {
 		display: flex;
