--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,7 @@
 	gap: 1rem;
 	min-height: 70vh;
 	grid-template-columns: 1fr 1fr 1fr;
-	padding: 4rem 0;
+	padding: 0 0 4rem;
 
 	.intro-section-element {
 		height: 100%;
